Changed TreeWidget to TableWidget

--- a/ResultsWindow.ui
+++ b/ResultsWindow.ui
@@ -20,13 +20,7 @@
       <enum>Qt::Horizontal</enum>
      </property>
      <widget class="QListWidget" name="listWidget"/>
-     <widget class="QTreeWidget" name="treeWidget">
-      <column>
-       <property name="text">
-        <string notr="true">1</string>
-       </property>
-      </column>
-     </widget>
+     <widget class="QTableWidget" name="tableWidget"/>
     </widget>
    </item>
   </layout>
